Novo endpoint de listagem
