# openapi.yml
@@ -96,6 +96,30 @@ paths:
               schema:
                 $ref: '#/components/schemas/TokenizedCardModel'
   /payments:
+    get:
+      tags:
+        - Payment Management
+      summary: Retrieve all payments with optional filters
+      operationId: findAllPayments
+      parameters:
+        - $ref: "#/components/parameters/page"
+        - $ref: "#/components/parameters/size"
+        - $ref: "#/components/parameters/sort"
+        - $ref: "#/components/parameters/direction"
+      responses:
+        '200':
+          description: OK. List of payments matching the filters.
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/Page"
+                  - type: object
+                properties:
+                  content:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/PaymentModel'
     post:
       tags:
         - Payment Management
@@ -262,7 +286,57 @@ paths:
         '404':
           description: Payment not found.
 components:
+  parameters:
+    page:
+      schema:
+        type: integer
+        example: 0
+      name: page
+      in: query
+      required: false
+    size:
+      schema:
+        type: integer
+        example: 5
+      name: size
+      in: query
+      required: false
+    sort:
+      schema:
+        type: string
+        example: "firstName"
+      name: sortByProperty
+      in: query
+      required: false
+    direction:
+      schema:
+        type: string
+        example: "desc"
+      name: sortDirection
+      in: query
+      required: false
   schemas:
+    Page:
+      type: object
+      required:
+        - number
+        - size
+        - totalPages
+        - totalElements
+        - content
+      properties:
+        number:
+          type: integer
+          example: 2
+        size:
+          type: integer
+          example: 9
+        totalPages:
+          type: integer
+          example: 15
+        totalElements:
+          type: integer
+          example: 150
     CreditCartInput:
       type: object
       description: Raw credit card details for tokenization.
@@ -407,16 +481,7 @@ components:
           description: The total amount of the payment.
           example: 125.5
         status:
-          type: string
-          enum:
-            - PENDING
-            - PROCESSING
-            - FAILED
-            - PAID
-            - CANCELLED
-            - REFUNDED
-          description: The current status of the payment.
-          example: PAID
+          $ref: '#/components/schemas/PaymentStatus'
         method:
           type: string
           enum:
@@ -523,3 +588,28 @@ components:
           type: string
           description: The card brand.
           example: Visa
+    PaymentWebhookEvent:
+      type: object
+      properties:
+        paymentId:
+          type: string
+          description: ID do pagamento
+        status:
+          $ref: '#/components/schemas/PaymentStatus'
+        notifiedAt:
+          type: string
+          format: date-time
+          description: Data e hora da notificação
+      required:
+        - paymentId
+        - status
+        - notifiedAt
+    PaymentStatus:
+      type: string
+      example: "PLACED"
+      enum:
+        - PENDING
+        - PROCESSING
+        - FAILED
+        - REFUNDED
+        - PAID
